logistic correction to bayes

--- a/_posts/2021-01-27-bayes.md
+++ b/_posts/2021-01-27-bayes.md
@@ -36,7 +36,7 @@ $$P(\text{white} | \text{tastes white})=\frac{\text{number of white teas that ta
 
 $$P(\text{white} | \text{tastes white})=\frac{6}{6+36}=14.3\%$$
 
-So you can see, the number of false positives I get from green teas that taste white is actually larger than the number of true positives, even though the false positives are a smaller proportion of the population.
+So you can see, the number of **false positives** I get from green teas that taste white is actually *larger* than the number of *true* positives, even though the false positives are a smaller proportion of the population.
 
 Another way to visualize this calculation is to make a table:
 
@@ -50,7 +50,11 @@ A presentation of data that shows the same relationships but looks different is 
 
 Here's an example from a few years ago, when I was using Tinder, the speed-online-dating app.  I was scoring each suitor in a spreadsheet on a few different categories, like "Musicality" and "Open-Mindedness" and "Attractiveness."  One time, I went on a date with a boy who got super high marks in all my predetermined categories; he was super smart, went to Harvard for undergrad and Oxford for grad, currently works at Facebook, knew a bit about rationality, had similar musical taste to me, was into climbing, played piano for 12 years, etc.  Basically he was getting 7-9 in every category.  *But* he seemed like he might be gay (and trying to date girls on Tinder because of familial pressure).  Because of that, I added a new category--weirdness/other--and scored him low on it, but he still came out with a higher score than any previous candidate.  So then I decided to do a Bayesian calculation of how likely he was to be gay.
 
-I've written about the fraternal birth order effect before in my post about [strange biological phenomena related to pregnancy](https://obscuredinosaurfacts.com/blog/post/2020/08/12/pregananant.html).  For some reason, the more older brothers a right-handed man has, the more likely he is to be gay.  By a *lot*.  For some strange reason, it doesn't affect women and it doesn't affect left-handed men.  The prior probability of being gay (equivalent to the prevalence in the population) is about 3%.  For every older brother you have, the probability goes up by 1/3.  The equation can be expressed as follows:
+I've written about the fraternal birth order effect before in my post about [strange biological phenomena related to pregnancy](https://obscuredinosaurfacts.com/blog/post/2020/08/12/pregananant.html).  For some reason, the more older brothers a right-handed man has, the more likely he is to be gay.  For some strange reason, it doesn't affect women and it doesn't affect left-handed men.  The prior probability of being gay (equivalent to the prevalence in the population) is about 3%.  For every older brother you have, the probability goes up by 1/3.
+
+**STOP PRESS: I have since been informed that this equation is incorrect!  See both my original derivation and the corrected equation in the Appendices to this post.  However, this is what I used at the time, and this part isn't part of the Bayesian calculation, so I'm leaving it as it was in this section.**
+
+The equation can be expressed as follows:
 
 $$P_{gay}=1-\left(\frac{97}{100}\left(\frac{2}{3}\right)^n\right)$$
 
@@ -101,7 +105,7 @@ Then, I state my priors and assumptions:
 - P(T \| C') = 0.5%: This is the false positive rate, which I looked up.  There are a few studies on this, and most of them agree that 0.5%, or one in 200, is about right.
 - P(T' \| C) = 0: I am assuming that there are no false negatives, meaning there are no cases in which I, a sick person, receive a negative COVID test result.
 - P(F \| C') = 0: I am assuming that there is no way my fiancé could've gotten COVID except through me.  This is reasonable because I was the only one who was going anywhere--he works from home, and we get groceries delivered.
-- P(F \| C) = 95%: This is the transmission rate, which I also estimated.  Given we were essentially in the same room for the four straight days of peak contagiousness, the likelihood my fiancé would get COVID given I had it is very high.  However, I'm not using 100% or even 99% because I think 95% confidence is pretty much as high as one should realistically bet on anything that isn't a straight-up fact.
+- P(F \| C) = 95%: This is the transmission rate, which I also estimated.  Given we were essentially in the same room for the four straight days of peak contagiousness, the likelihood my fiancé would get COVID given I had it is very high.  However, I'm not using 100% or even 99% because I think 95% confidence is pretty much as high as one should realistically bet on anything that isn't a straight-up fact. (This is known as [Cromwell's Rule](https://en.wikipedia.org/wiki/Cromwell%27s_rule).)
 
 Note: Since I'm assuming no false negatives (P(T' \| C) = 0), this also applies to my fiancé.  That means P(fiancé does not have COVID) and P(fiancé tests negative) are equivalent.
 
@@ -117,7 +121,96 @@ $$P(C | T, F')=\frac{0.5}{0.5+0.45}=52.6\%$$
 
 Wow, it's quite a toss-up.  Now I'm 52.6% confident (if you can call it "confident") that I truly had COVID asymptomatically.  Expanding the table again into 4D, using the probabilities of exhibiting symptoms given disease (P(S \| C) = 40%, P(S \| C') = 0), is left as an exercise for the reader.
 
-### Appendix A: Derivation of Expression of Fraternal Birth Order Effect
+### Appendix A: Correction to Fraternal Birth Order Effect Equation
+
+A careful reader of this blog post did a little bit of their own research and discovered that the equation I used highly overestimated the power of the FBOE.  I looked up the statistics of how many people in the general population have one older brother, two older brothers, etc, and used my equation along with this information to predict the proportion of gay men in the overall population.  And that reader was right: my equation predicted that around 7% of men would be gay, when the actual value is 3%.  I also cross-checked using the statement from the original paper that "15-28% of gay men can attribute their sexuality to the FBOE," using those numbers along with the population's prevalence of older brothers to generate an approximation of what the probability of being gay given one older brother would be, and came up with between 3.6 and 5.4%, not even close to the value my equation gives of 35%.
+
+Why was I so wrong? I misinterpreted the authors' statement of "increases by 33%" to refer to an *absolute* 33%, not a *relative* 33%.  The correct interpretation was relative.  Another way to put it: I thought it was 33% of 100%, but they meant 33% of the original probability.
+
+So enough about me being totally wrong--what's right?  Well, the naïve interpretation of a relative increase of 33% every time could be expressed like this:
+
+$$P_{gay}=\frac{3}{100}×1.33×1.33...$$
+
+But eventually (between 12 and 13 older brothers) this probability exceeds 100%, which can't be right--you know intuitively there should still be a small chance of having a straight son no matter how many sons you have.  So clearly the "increases by 33%" trend can't just continue exponentially.  What's a better model?
+
+The **logistic curve** is a shape commonly found in population dynamics, and it handily looks very similar to exponential behavior for low values of n, but at some n it hits an **inflection point** and switches its behavior to logarithmic, asymptotically approaching a finite peak value.  This is what it looks like:
+
+![logistic](/assets/images/posts/anatomy-of-logistic.jpg)
+
+The generalized equation for our logistic curve is written as follows:
+
+$$P_{gay}(n)=\frac{1}{1+e^{-k(n-n_0)}}$$
+
+Where k is a constant controlling the steepness of the growth, and n<sub>0</sub> is the n-coordinate of the inflection point.  n is still number of older brothers.
+
+Now, how do we solve for the constants k and n<sub>0</sub>?  We can plug in two known points, in this case P<sub>gay</sub>(0) and P<sub>gay</sub>(1).  The former is equal to 3%, and for the latter we'll apply the "increases by 33%" just once to get 4%.
+
+$$P_{gay}(0)=\frac{1}{1+e^{-k(0-n_0)}}=0.03$$
+
+$$\frac{1}{1+e^{kn_0}}=0.03$$
+
+$$e^{kn_0}=32.33$$
+
+Now we can use this value of e<sup>kn<sub>0</sub></sup> when we plug in the value for P<sub>gay</sub>(1):
+
+$$P_{gay}(1)=\frac{1}{1+e^{-k(1-n_0)}}=0.04$$
+
+$$\frac{1}{1+e^{-k+kn_0}}=0.04$$
+
+$$1=0.04(1+e^{-k}e^{kn_0})$$
+
+$$k=0.298$$
+
+$$n_0=11.66$$
+
+So the final equation becomes
+
+$$P_{gay}(n)=\frac{1}{1+e^{-0.298(n-11.66)}}$$
+
+Which looks like this:
+
+![logistic2](/assets/images/posts/logistic.png)
+
+That's a very differently shaped curve than the one I was using before!  The probability doesn't surpass 50% until you have 12 older brothers.  Now I can redo my Bayesian calculation on that Tinder hopeful using the corrected prior of 4% for a guy with one older brother.
+
+- Out of 1000 of this suitor, 
+- 40 will be gay and 960 will be straight.
+- Of the 40 gay, 28 will seem gay and 12 will seem straight. 
+- Of the 960 straight, 672 will seem straight and 288 will seem gay. So the probability of him being gay given he seems gay is
+
+$$P(\text{gay} | \text{seems gay}) = \frac{28}{28+288} = 8.9\%$$
+
+Uh oh!  I guess I should've gotten to know him a little bit better!  Too late now.
+
+Also, according to the new equation, Hans from Frozen (who does use his sword in his right hand) has a 52.5% chance of being gay, and Ron Weasley, who has five older brothers, has a 12% chance.
+
+Thanks a lot to [u/wupt](https://www.reddit.com/user/wupt/) on Reddit for correcting me!  This logistic exercise was quite fun.
+
+[Original paper](https://pubmed.ncbi.nlm.nih.gov/8540587/)
+
+[Logistic curve image reference](https://s3-us-west-2.amazonaws.com/courses-images-archive-read-only/wp-content/uploads/sites/924/2015/11/25202016/CNX_Precalc_Figure_04_07_0062.jpg)
+
+### Appendix B: Explanation of the Formal Expression of Bayes's Theorem
+
+If you look up Bayes's Theorem, the most common way it's expressed is
+
+$$P(A | B)=\frac{P(B | A)P(A)}{P(B)}$$
+
+We suspect this equation is just another isomorphism, but how do we get there from our intuitive tabular version?
+
+Let's go back to the tea example, because it's simplest.  Our final formulation of that problem was
+
+$$P(\text{white} | \text{tastes white})=\frac{\text{number of white teas that taste white}}{\text{total number of teas that taste white}}$$
+
+So in this case, "white" is event A, and "tastes white" is event B.  The numerator, "number of white teas that taste white," can be rewritten as 
+
+$$P(B | A)P(A)$$
+
+because P(B \| A) (probability of tea tasting white given that it is white) in the tea example is 60% (from our 60/40 statement of the problem), and P(A) is 10%, so P(B \| A)P(A) = 6%, which we can see from the table is equivalent to "number of white teas that taste white".  In fact, that was how we *generated* that table entry--by first multiplying the total population by P(A) to get just the white teas, and then multiplying that portion by P(B \| A), the 60% tasting accuracy.  "Total number of teas that taste white" is equivalent to P(B).  Despite its brevity, I think this is a rather unintuitive way of framing it, which is why I prefer the tabular version.
+
+### Appendix C: Derivation of My Original Incorrect Expression of Fraternal Birth Order Effect
+
+This was how I derived the equation I used years ago 
 
 If you think about how probability "increases by 1/3" for every older brother, you might be tempted to just add probabilities like this: 
 
@@ -134,21 +227,3 @@ $$P_{straight}=\frac{97}{100}\left(\frac{2}{3}\right)^n$$
 where n is the number of older brothers you have. Now, sanity check, you can see that this probability will get smaller and smaller but will never equal or be less than zero. And the probability of being gay is one minus the probability of being straight, giving us the formulation
 
 $$P_{gay}=1-\left(\frac{97}{100}\left(\frac{2}{3}\right)^n\right)$$
-
-### Appendix B: Explanation of the Formal Expression of Bayes's Theorem
-
-If you look up Bayes's Theorem, the most common way it's expressed is
-
-$$P(A | B)=\frac{P(B | A)P(A)}{P(B)}$$
-
-We suspect this equation is just another **isomorphism**, but how do we get there from our intuitive tabular version?
-
-Let's go back to the tea example, because it's simplest.  Our final formulation of that problem was
-
-$$P(\text{white} | \text{tastes white})=\frac{\text{number of white teas that taste white}}{\text{total number of teas that taste white}}$$
-
-So in this case, "white" is event A, and "tastes white" is event B.  The numerator, "number of white teas that taste white," can be rewritten as 
-
-$$P(B | A)P(A)$$
-
-because P(B \| A) (probability of tea tasting white given that it is white) in the tea example is 60% (from our 60/40 statement of the problem), and P(A) is 10%, so P(B \| A)P(A) = 6%, which we can see from the table is equivalent to "number of white teas that taste white".  In fact, that was how we *generated* that table entry--by first multiplying the total population by P(A) to get just the white teas, and then multiplying that portion by P(B \| A), the 60% tasting accuracy.  "Total number of teas that taste white" is equivalent to P(B).  Despite its brevity, I think this is a rather unintuitive way of framing it, which is why I prefer the tabular version.
