fixed missing words

--- a/_posts/2021-01-27-bayes.md
+++ b/_posts/2021-01-27-bayes.md
@@ -143,7 +143,7 @@ $$P_{gay}(n)=\frac{1}{1+e^{-k(n-n_0)}}$$
 
 Where k is a constant controlling the steepness of the growth, and n<sub>0</sub> is the n-coordinate of the inflection point.  n is still number of older brothers.
 
-Now, how do we solve for the constants k and n<sub>0</sub>?  We can plug in two known points, in this case P<sub>gay</sub>(0) and P<sub>gay</sub>(1).  The former is equal to 3%, and for the latter we'll apply the "increases by 33%" just once to get 4%.
+Now, how do we solve for the constants k and n<sub>0</sub>?  We can plug in two known points, in this case P<sub>gay</sub>(0) and P<sub>gay</sub>(1).  The former is equal to 3%, and for the latter we'll apply "increases by 33%" just once to get 4%.
 
 $$P_{gay}(0)=\frac{1}{1+e^{-k(0-n_0)}}=0.03$$
 
@@ -210,7 +210,7 @@ because P(B \| A) (probability of tea tasting white given that it is white) in t
 
 ### Appendix C: Derivation of My Original Incorrect Expression of Fraternal Birth Order Effect
 
-This was how I derived the equation I used years ago 
+This was how I derived the equation I used a few years ago when I was deciding whether or not to keep seeing that one suitor.  Probabilistically, it's still an internally consistent equation, but it doesn't actually reflect the real fraternal birth order effect.
 
 If you think about how probability "increases by 1/3" for every older brother, you might be tempted to just add probabilities like this: 
 
