--- a/_posts/2021-01-27-bayes.md
+++ b/_posts/2021-01-27-bayes.md
@@ -48,7 +48,7 @@ A presentation of data that shows the same relationships but looks different is 
 
 ### Example 2: Taking Bayes On A Date
 
-Here's an example from a few years ago, when I was using Tinder, the speed-online-dating app.  I was scoring each suitor in a spreadsheet on a few different categories, like "Musicality" and "Open-Mindedness" and "Attractiveness."  One time, I went on a date with a boy who got super high marks in all my predetermined categories; he was super smart, went to Harvard for undergrad and Oxford for grad, currently works at Facebook, knew a bit about rationality, had similar musical taste to me, was into climbing, played piano for 12 years, etc.  Basically he was getting 7-9 in every category.  *But* he seemed like he might be gay (and trying to date girls on Tinder because of familial pressure).  Because of that, I added a new category--weirdness/other--and scored him low on it, but he still came out with a higher score than any previous candidate.  So then I decided to do a Bayesian calculation of how likely he was to be gay.
+Here's an example from a few years ago, when I was using Tinder, the speed-online-dating app.  I was scoring each suitor in a spreadsheet on a few different categories, like "Musicality" and "Open-Mindedness" and "Attractiveness."  One time, I went on a date with a boy who got super high marks in all my predetermined categories; he was super smart, went to Harvard for undergrad and Oxford for grad, currently works at Facebook, knew a bit about rationality, had similar musical taste to me, was into climbing, played piano for 12 years, etc.  Basically he was getting 7-9 in every category.  *But* he seemed like he might be gay (and trying to date girls on Tinder because of familial pressure).  Because of that, I added a new "other" category and scored him low on it, but he still came out with a higher score than any previous candidate.  So then I decided to do a Bayesian calculation of how likely he was to be gay.
 
 I've written about the fraternal birth order effect before in my post about [strange biological phenomena related to pregnancy](https://obscuredinosaurfacts.com/blog/post/2020/08/12/pregananant.html).  For some reason, the more older brothers a right-handed man has, the more likely he is to be gay.  For some strange reason, it doesn't affect women and it doesn't affect left-handed men.  The prior probability of being gay (equivalent to the prevalence in the population) is about 3%.  For every older brother you have, the probability goes up by 1/3.
 
