--- a/_posts/2021-02-24-creative.md
+++ b/_posts/2021-02-24-creative.md
@@ -62,7 +62,7 @@ This kind of story seems to be representative of the way most people think about
 
 However, I can tell you firsthand that dualism is wrong.  Not because I have a strong conviction about the nonexistence of the metaphysical--in fact, I believe in some form of magic for reasons that will soon become apparent--but because I've *lived* Freaky Friday, over and over, for longer than I can remember.  And it's nothing like the movie, believe me.
 
-Let me explain with another parable: Theseus's ship.  This was a historically important ship to the ancient Greeks, and in attempting to preserve it for posterity, they gradually replaced all the timber as it wore out with new wood.  Eventually every part of the old ship was replaced, leading some to question whether or not it was the same ship, and if not, at what point it had become something else.  All biological organisms are like Theseus's ship--even your skeleton is a living tissue whose cells are completely replaced within 10 or 15 years.  The "you" of 15 years ago shares no components at all with your present self, but you still feel like the same person.  This is why duality is so appealing and intuitive--there's this ineffable sense of *continuity* that appears to exist independent of the physical components that make up a body.
+Let me explain with another parable: Theseus's ship.  This was a historically important ship to the ancient Greeks, and in attempting to preserve it for posterity, they gradually replaced all the timber as it wore out with new wood.  Eventually every part of the old ship was replaced, leading some to question whether or not it was the same ship, and if not, at what point it had become something else.  All biological organisms are like Theseus's ship--even your skeleton is a living tissue whose cells are completely replaced within 10 or 15 years.  The "you" of 15 years ago shares no components at all with your present self, but you still feel like the same person.  This is why dualism is so appealing and intuitive--there's this ineffable sense of *continuity* that appears to exist independent of the physical components that make up a body.
 
 Though every human is their own Theseus's ship, replacing their cells as they get worn out, what they become through this process is just the older version of themselves.  But apparently it doesn't have to be that way--here's where my own story comes in.
 
@@ -74,9 +74,9 @@ I've been men, women, and everything in between.  I've been every race and combi
 
 I don't have direct control over the person I'll become, but clearly I can exert some influence.  I generally try to spend as much time as possible with people I wouldn't mind being in the future, and avoid those I'd rather not become.  It often works, but sometimes it doesn't.  While in my present state I have a strong moral compass, and am currently working on cultivating a consensual relationship with my intended next form, I've been people I'm not proud of, and have done some terrible things in order to increase my chances at a good next life.
 
-As I've said, I don't remember my childhood, or even anything beyond about two and a half centuries ago.  The human brain seems to have limited long-term memory capacity, and the issue is exacerbated by the fact that all my information has to go through this chain: if one form has a particularly bad memory, no future forms can recover that lost information.  At some point I started keeping a diary--in fact I've probably kept many diaries that have since been lost to the ages--but of course, my original diary from 1799 is in pretty bad shape.  I have spent time copying over the content into new books, but before the digital age this took forever and had to be repeated every few decades.  And, as time went on there was just more and more to copy, so certainly some things were lost.  My records go back to the 1300s, but when I go back and read the oldest stuff, for all I remember it might as well have been someone else--ha, ha.
+As I've said, I don't remember my childhood, or even anything beyond about two and a half centuries ago.  The human brain seems to have limited long-term memory capacity, and the issue is exacerbated by the fact that all my information has to go through this chain: if one form has a particularly bad memory, no future forms can recover that lost information.  At some point I started keeping a diary--in fact I've probably kept many diaries that have since been lost to the ages--but of course, the oldest original diary I currently own, which is from 1799, is in pretty bad shape.  I have spent time copying over the content into new books, but before the digital age this took forever and had to be repeated every few decades.  And, as time went on there was just more and more to copy, so certainly some things were lost.  My records go back to the 1300s, but when I go back and read the oldest stuff, for all I remember it might as well have been someone else--ha, ha.
 
-I've had some pretty good relationships and careers, but I have to keep moving every few years when it becomes visibly apparent that I'm looking more and more like someone I know.  One time I turned into a particular famous actor after a single exposure to him, and spent that decade in a remote town in New Zealand trying to convince the locals I wasn't him, I was just a hapless lookalike.
+I've had some pretty good relationships and careers, but I have to keep moving every few years when it becomes visibly apparent that I'm looking more and more like someone I know.  One time I turned into a particular famous actor after a single exposure to him, and spent that decade in a remote town in New Zealand trying to convince the locals I wasn't him, but just a hapless lookalike.
 
 I'm writing this during a period of clarity--I was lucky to pick up someone reasonably intelligent and natively rational and introspective.  But I'm not always so clear-headed.  Some of the worst parts are the periods of transition from an intelligent form to a less intelligent one (you can read a much more heartwrenching account of that phenomenon than I'm capable of producing in *Flowers for Algernon*).  It's really frustrating to always have things "on the tip of my brain" and to notice myself becoming overwhelmed and unable to focus.  I think it's potentially a more exquisite form of torture than just being a dumb person all the time, since, as I can tell you firsthand, people tend to overestimate their capabilities.  However, unlike Charlie Gordon, I at least have my next life to look forward to during such periods of ineptitude.
 
@@ -102,7 +102,7 @@ I sighed, not that I was expecting a different answer.  From what I could see ou
 
 I finished my coffee replaced the empty dishware in the dumbwaiter, where it quickly rose out of sight to be washed.  I stood up and pulled on my overalls, and then my socks and boots, just as I'd done every day back on Earth.  I admit, my life aboard this weird little spaceship is not that qualitatively different than it was at home.  Just the scenery had changed, the food was better (and I didn't have to make it or clean up), and the sense of nihilism was stronger.
 
-I went out of my bedroom and into the pasture, a large field hosting a diverse assortment of wild grasses.  It was lit by a rather incongruous-looking glass chandelier, which during the "day" was too bright to look at, but which moved on a linear rail across the ceiling and modulated its brightness to create, I admit, a rather convincing effect.  I entered a small area fenced off by chicken wire, and began the work of moving the chickens.  First I collected all the eggs and put them in a basket outside of the fence.  Then I had to herd all the birds back into their mobile hutch, which was sometimes frustrating but today was relatively easy, and then I rolled up the fence, and threw it on top of the hutch before dragging the whole thing into a new patch of grass and erecting the fence again.  Last night I'd moved the cows out of this area, so now it was the chickens' turn to pick maggots out of the manure and fertilize the grazed area to promote regrowth.  Yes, there are innumerable maggots, eight chickens, and two cows on board my spaceship.  All the cows and chickens are female; sometimes Uriel artificially inseminates one of them, though I've never seen him do it.  I'm sure if I were any other type of abductee, Uriel could figure out how to do all this labor himself, or maybe he'd've set up the ship to produce lab-grown meat and cheese out of interplanetary dust and cut out all the middlemen.  As it is though, the daily movement of the animals and the feeling of being "outside" with the "sun" on my back is the only thing keeping me from slipping into existential despair.  I'm sure that's by design.
+I went out of my bedroom and into the pasture, a large field hosting a diverse assortment of wild grasses.  It was lit by a rather incongruous-looking glass chandelier, which during the "day" was too bright to look at, but which moved on a linear rail across the ceiling and modulated its brightness to create, I admit, a rather convincing effect.  I entered a small area fenced off by chicken wire, and began the work of moving the chickens.  First I collected all the eggs and put them in a basket outside of the fence.  Then I had to herd all the birds back into their mobile hutch, which was sometimes frustrating but today was relatively easy, and then I rolled up the fence and threw it on top of the hutch before dragging the whole thing into a new patch of grass and erecting the fence again.  Last night I'd moved the cows out of this area, so now it was the chickens' turn to pick maggots out of the manure and fertilize the grazed area to promote regrowth.  Yes, there are innumerable maggots, eight chickens, and two cows on board my spaceship.  All the cows and chickens are female; sometimes Uriel artificially inseminates one of them, though I've never seen him do it.  I'm sure if I were any other type of abductee, Uriel could figure out how to do all this labor himself, or maybe he'd've set up the ship to produce lab-grown meat and cheese out of interplanetary dust and cut out all the middlemen.  As it is though, the daily movement of the animals and the feeling of being "outside" with the "sun" on my back is the only thing keeping me from slipping into existential despair.  I'm sure that's by design.
 
 After moving the chickens, I milked the cows, returned to the bedroom to put the animal products in the dumbwaiter so Uriel could process them, and then came back "outside".  The pasture was by far the most pleasant place I had available to me at the moment.  I took my sketchbook out of my pocket and started yet another portrait of one of the chickens.
 
@@ -110,7 +110,7 @@ So, to invoke a rather clichéd movie trope, how did I end up here?
 
 To be honest, I don't know all the details.  But essentially, mankind was getting to be in a heap of trouble toward the end of the 21st century, in terms of worsening natural disasters, widespread food shortage, deadly pandemics popping up every few years, and interminable wars over dwindling resources.  At some point, someone quietly invented an artificial general intelligence, and had tried really hard to get its goals to be aligned to those of humanity, hoping that this entity would be able to coordinate a reversal of fortune and solve all the ongoing crises.  And they were actually pretty close to achieving this goal alignment, as far as I can tell.  At least, they succeeded in not creating a [paperclip maximizer](https://www.lesswrong.com/tag/paperclip-maximizer) or some other world-destroying problem.  However, instead of having the superintelligence want what's best for humanity, it somehow ended up wanting what's best for one specific human.  Namely, me.
 
-And apparently, the numerous problems of Earth were already beyond Uriel's ability to solve them with high enough confidence and speed, so he decided the safest way to guarantee me a long and happy life was to design and build a bespoke spaceship, kidnap me, and keep me in orbit between Earth and Mars until I die.
+And apparently, the numerous problems of Earth were already beyond Uriel's ability to solve with high enough confidence and speed, so he decided the safest way to guarantee me a long and happy life was to design and build a bespoke spaceship, kidnap me, and keep me in orbit between Earth and Mars until I die.
 
 A couple obvious questions spring to mind.  First and foremost, why me?  Do I fit some kind of built-in description of an average human?  Was the person who invented Uriel a friend or relative of mine?  Did they pick my name out of a hat while attempting to take their creation for a test drive, and then the test drive got out of hand?  Or maybe it had something to do with my being a self-sustaining recluse who was probably significantly happier and healthier than the average starving, dying, war-torn human at the time.  These are all questions I've posed to Uriel, but sadly, the answer would not be good for my mental health.  Second, it sure is lucky that I'm the most antisocial person I've ever met.  If Uriel had picked a different victim, one with a large extended family and social network, would he have had to kidnap a hundred people?  If part of the victim's wishes included all their friends and family being as happy as possible as well, that would involve kidnapping exponentially more people, which might be *more* difficult than just solving all of humanity's problems.  Is my extreme antisociality part of the reason I was chosen?
 
