--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -60,7 +60,7 @@ Day 4: Freeze - *Yutyrannus*.  Drawn in about 2 hours.
 
 ![fatbird-trex](/assets/images/posts/fatbird-trex.jpg)
 
-However, *Yutyrannus* lived in quite different conditions than *Tyrannosaurus*--the former lived in a temperate climate that would’ve seen snow in the winter, while the latter lived in a subtropical forested floodplain.  Plus, *Tyrannosaurus* is about 13 times heavier, and due to the [square-cube law](https://en.wikipedia.org/wiki/Square%E2%80%93cube_law), would’ve had a much harder time dissipating heat.  In addition to all this, by now many tiny, high-res skin impressions from The King have been found that indicate complete scaliness.
+However, *Yutyrannus* lived in quite different conditions than *Tyrannosaurus*--the former lived in a temperate climate that would’ve seen snow in the winter, while the latter lived in a subtropical forested floodplain.  Plus, *Tyrannosaurus* is about 13 times heavier, and due to the [square-cube law](https://en.wikipedia.org/wiki/Square%E2%80%93cube_law), would’ve had a much harder time dissipating heat.  In addition to all this, many tiny, high-res skin impressions from The King have been found that indicate complete scaliness.
 
 I picked *Yutyrannus* to be my “freeze” because of the seasonal changes it would’ve experienced in its environment.  Here, *Yutyrannus* takes a drink at a frozen pond in early winter, reminiscent of that stereotypical wolf picture.  This piece ended up being quite the experiment in textures.  Plants are hard.
 
@@ -75,9 +75,9 @@ Day 5: Build - *Protoceratops*.  Drawn in about an hour.
 
 *Protoceratops* was a small ceratopsian from Late Cretaceous Mongolia.  It lived in the desert alongside *Velociraptor*, and was probably **cathemeral**, meaning that rather than being nocturnal or diurnal, it was active at sporadic times during the day and night.
 
-I chose *Protoceratops* to be my “build” because of its fossilized record of extensive nesting behavior.  A *Protoceratops* nest and a *Psittacosaurus* nest (another small basal ceratopsian) have been found that each contained lots of yearlings, which means that the young remained in the nest for quite awhile after hatching.  In the case of *Psittacosaurus*, the nest also contained a subadult that appeared to be babysitting.  All this makes me think that *Protoceratops* probably cared a lot about how its nest was constructed, inspiring this piece.
+I chose *Protoceratops* to be my “build” because of its fossilized record of extensive nesting behavior.  A *Protoceratops* nest and a [*Psittacosaurus*](https://obscuredinosaurfacts.com/profile/2020/09/02/psittacosaurus.html) nest (another small basal ceratopsian) have been found that each contained lots of yearlings, which means that the young remained in the nest for quite awhile after hatching.  In the case of *Psittacosaurus*, the nest also contained a subadult that appeared to be babysitting.  All this makes me think that *Protoceratops* probably cared a lot about how its nest was constructed, inspiring this piece.
 
-An interesting thing to note is the huge number of dinosaurs in these litters--15 for *Protoceratops* and 24 for *Psittacosaurus*.  Most animals that care for their offspring only have a few, because of the large amount of resources each one requires.  This is known as **K-strategy** (the K stands for Karrying Kapacity...in German).  On the other hand, animals who have a lot of offspring and don’t care for any of them, like a seahorse, are known as **r-strategists** (the r stands for rate.  Both these terms come from the math behind population dynamics).  These basal ceratopsians show a confusing mix of both strategies--a rather large number of offspring (though 24 babies is still nothing compared to the thousands put out by many sea creatures) with extensive parental and sibling care.
+An interesting thing to note is the large number of dinosaurs in these litters--15 for *Protoceratops* and 24 for *Psittacosaurus*.  Most animals that care for their offspring only have a few, because of the large amount of resources each one requires.  This is known as **K-strategy** (the K stands for Karrying Kapacity...in German).  On the other hand, animals who have a lot of offspring and don’t care for any of them, like a seahorse, are known as **r-strategists** (the r stands for rate.  Both these terms come from the math behind population dynamics).  These basal ceratopsians show a confusing mix of both strategies--a rather large number of offspring (though 24 babies is still nothing compared to the thousands put out by many sea creatures) with extensive parental and sibling care.
 
 ### Day 6: Husky
 
@@ -95,9 +95,9 @@ What’s with the huge, dragonlike scales? A [fossil](https://www.nationalgeogra
 
 Day 7: Enchanted - *Carnotaurus*.  Drawn in about 40 minutes.
 
-*Carnotaurus* (meaning “meat bull”--people often say it means “meat-eating bull,” but it doesn’t) was a Late Cretaceous South American abelisaur, a group of short-faced, medium-sized, leggy carnivores with head ornamentation and comically tiny arms.  They hunted sort of like big cats, biting once and then holding on until the prey was subdued, rather than going for raw bite force--that’s why their skulls are shorter than, say, *Tyrannosaurus*: *Carnotaurus*’s jaws were stronger in torsion but worse in compression.  They also weren’t nearly as big; *Carnotaurus* maxed out at 2.5ish tons, while *Tyrannosaurus* was about 6 times heavier.
+*Carnotaurus* (meaning “meat bull”--people often say it means “meat-eating bull,” but it doesn’t) was a Late Cretaceous South American abelisaur, a group of short-faced, medium-sized, leggy carnivores with head ornamentation and comically tiny arms.  They hunted sort of like big cats, biting once and then holding on until the prey was subdued, rather than going for raw bite force--that’s why their skulls are shorter than, say, *Tyrannosaurus*: *Carnotaurus*’s jaws were stronger in torsion but worse in compression.  They also weren’t nearly as big; *Carnotaurus* weighed around 1.35 tonnes, while *Tyrannosaurus* was about 6 times heavier.
 
-*Carnotaurus* is known from a single, nearly complete specimen, so while we understand its anatomy well, we don’t know much about its ontogeny or if it exhibited sexual dimorphism.  I went with very little sexual dimorphism in this piece because none is apparent in the closely related *Majungasaurus*, which is known from many specimens.  The only difference between Mr. and Ms. in this picture is that the lady has skinnier horns and bare arms, but if they were in color, he would be brightly colored while she would be more plain.
+*Carnotaurus* is known from a single, nearly complete specimen, so while we understand its anatomy well, we don’t know much about its ontogeny or if it exhibited sexual dimorphism.  I went with very little sexual dimorphism in this piece because none is apparent in the closely related [*Majungasaurus*](https://obscuredinosaurfacts.com/profile/2020/02/19/majungasaurus.html), which is known from many specimens.  The only difference between Mr. and Ms. in this picture is that the lady has skinnier horns and bare arms, but if they were in color, he would be brightly colored while she would be more plain.
 
 For “enchanted,” I wanted to draw a mating dance, and I picked *Carnotaurus* because of Trey the Explainer’s [video](https://www.youtube.com/watch?v=slcVvR7UMik&t=1401s) and the “pom pom arms” depiction in *All Yesterdays*.  Their head ornamentation was clearly for display and intra-specific competition (why ram prey if you have a bear trap for a mouth?).  Their tiny arms also had an unusually wide range of motion for a theropod, and could stick straight out, possibly making a striking profile when viewed from the front.  I based the mating dance pose on that of the sharp-tailed grouse, which seemed ideal for showing off the horns, arms, and tail.  Do you think the object of his affection is enchanted, or just humoring him?
 
@@ -136,7 +136,7 @@ Day 8: Swing - *Megalancosaurus*.  Drawn in about an hour.
 
 Day 10: Pattern - *Ornithomimus* (chicks).  Drawn in about 40 minutes.
 
-*Ornithomimus* (meaning “bird mimic”) was an ornithomimid dinosaur from Late Cretaceous North America.  They were extremely convergent with ratites (the family of flightless birds that includes ostriches), but given ornithomimids did it first, it might be more accurate to say that ratites are ornithomimid mimics.  *Ornithomimus* had a long neck, long legs, and a little head with a toothless beak.  A specimen found in 2015 with feathers and skin preserved indicates that their integument was _also_ very convergent with ratites, not just their skeletal structure.  We know that *Ornithomimus* had feathers basically everywhere except its legs, which it probably used for thermoregulation (maybe it even peed on its legs like a vulture to keep cool?  Ideas for NSFW paleoart?), and that adults had **pennaceous** feathers on their arms while juveniles did not, indicating that these feathers were for sexual display.
+*Ornithomimus* (meaning “bird mimic”) was an ornithomimid dinosaur from Late Cretaceous North America.  They were extremely convergent with ratites (the family of flightless birds that includes ostriches), but given ornithomimids did it first, it would be more accurate to say that ratites are ornithomimid mimics.  *Ornithomimus* had a long neck, long legs, and a little head with a toothless beak.  A specimen found in 2015 with feathers and skin preserved indicates that their integument was also very convergent with ratites, not just their skeletal structure.  We know that *Ornithomimus* had feathers basically everywhere except its legs, which it probably used for thermoregulation (maybe it even peed on its legs like a vulture to keep cool?), and that adults had **pennaceous** feathers on their arms while juveniles did not, indicating that these feathers were for sexual display.
 
 I picked *Ornithomimus* to be my “pattern” because baby ostriches have adorable stripes, so it’s not a bad guess to say baby *Ornithomimus* did too.  Many animals start out life stripy or spotty and then lose the patterning later on when they develop other defenses besides camouflage.
 
@@ -151,9 +151,9 @@ Day 11: Snow - *Leaellynasaura*.  Drawn in about an hour.
 
 *Leaellynasaura* was a small ornithischian from Early Cretaceous Australia, at a time when Australia was joined to Antarctica and South America and all three had areas within the Antarctic Circle.  The climate was much milder than today’s Antarctica, but the animals that lived there would have still had to deal with months-long darkness and frigid conditions.
 
-*Leaellynasaura* is often drawn with a thin layer of protofeathers, which it is likely it would have needed to survive the harsh winters.  However, here I dressed up my *Leaellynasaura* like a snowy owl, with a thick layer of “type 3” feathers that go all the way down to the feet to create a wide snowshoe for walking on powder without sinking.  The arms are totally hidden in fluff, and only the face is bare.  This depiction has at least a little basis in fact, since we now know that ornithischians did sometimes have “type 3” feathers, a la *Kulindadromeus*.
+*Leaellynasaura* is often drawn with a thin layer of protofeathers, which it is likely it would have needed to survive the harsh winters.  However, here I dressed up my *Leaellynasaura* like a snowy owl, with a thick layer of more complex feathers that go all the way down to the feet to create a wide snowshoe for walking on powder without sinking.  The arms are totally hidden in fluff, and only the face is bare.  This depiction has at least a little basis in fact, since we now know that ornithischians did sometimes have complex feathers, a la [*Kulindadromeus*](https://obscuredinosaurfacts.com/profile/2020/08/02/kulinda.html).
 
-*Leaellynasaura* had one of the longest tail-to-body ratios of any animal.  What was it used for?  Some suggest they were held upright like a signpost so that they could find each other and stay together.  Others suggest it was a sort of false head, used to try to get a predator to focus on the wrong end.
+*Leaellynasaura* had one of the longest tail-to-body ratios of any animal.  What was it used for?  Some suggest they were held upright like a signpost so that they could find each other and stay together.  Others suggest it was a false head, used to try to get a predator to focus on the wrong end.
 
 References [1](https://www.deviantart.com/eurwentala/art/Blue-Moment-474422923) [2](https://johnconway.co/ay_leaellynasaura)
 
@@ -191,9 +191,9 @@ This comic is largely based on Steve Brusatte’s description from his book _The
 
 Day 14: Overgrown - *Ambopteryx*. Drawn in about 40 minutes.
 
-*Ambopteryx* (meaning “both wing”) was a scansoriopterygid from Late Jurassic China. It was one of a group of very strange “bat-winged” dinosaurs that flew using a skin membrane stretched between their body and elongated third finger. They also had feathers (hence the name). This is one of at least four times that different branches of theropods developed flight independently, and definitely the strangest.
+*Ambopteryx* (meaning “both wing”) was a scansoriopterygid from Late Jurassic China. It was one of a group of very strange “bat-winged” dinosaurs that glided using a skin membrane stretched between their body and elongated third finger. They also had feathers (hence the name). This is one of at least four times that different branches of theropods developed wings independently, and definitely the strangest.
  
-*Ambopteryx* was just described in May of this year, and is the second scansoriopterygid found preserved with membranes intact (the first was *Yi*, 2015). The *Ambopteryx* holotype also preserves the long individual tail feathers. Before *Yi*, we had no idea how these bat-winged dinos lived—many thought they poked their elongated finger into trees like an aye aye.
+*Ambopteryx* was just described in May of this year, and is the second scansoriopterygid found preserved with membranes intact (the first was *Yi*, 2015). The *Ambopteryx* holotype also preserves the long individual tail feathers. Before *Yi*, we had no idea how these bat-winged dinos lived-—many thought they poked their elongated finger into trees like an aye aye.
  
 I picked *Ambopteryx* to be my “overgrown” because it probably lived in the deep forest and hid amongst the vegetation...a bit of a stretch I guess.  I don’t know much about plants so please forgive me if the plants shown here are totally anachronistic.
  
@@ -220,20 +220,20 @@ Day 16: Wild - *Araripesuchus*.  Drawn in about an hour.
  
 *Araripesuchus* was part of a group of terrestrial crocs called notosuchians, many of which had certain features that were very convergent with mammals.  These included **heterodont dentition**, or different types of teeth specialized for different purposes (molars versus incisors versus canines), and possibly external moveable ear-flaps, called **pinnae**.  Modern crocs’ ear-lids, which they use to prevent water from getting in their ears, may even have evolved from these mammal-like external ear structures!
  
-I picked *Araripesuchus* to be my “wild” both in the wild-animal sense that it gives off a kind of crazy fierceness, and in the “that’s wild” sense that it’s such a strange creature.  Here, I’ve depicted *Araripesuchus* as being very convergent with a wolf.  It came out a little unexpectedly Egyptian-looking (Anubis and Sobek had a baby?), but overall I’m happy with the composition.  It’s pretty speculative--*Araripesuchus* is pretty basal on the notosuchian family tree, and even if it did have pinnae, they may not have been this prominent--but I think the world needs more creative paleoart of weird pseudosuchians, since they’re such a cool group that’s relatively unknown to the public.  So here you go.
+I picked *Araripesuchus* to be my “wild” both in the wild-animal sense that it gives off a kind of crazy fierceness, and in the “that’s wild” sense that it’s such a strange creature.  Here, I’ve depicted *Araripesuchus* as being very convergent with a wolf.  It came out a little unexpectedly Egyptian-looking (Anubis and Sobek had a baby?), but overall I’m happy with the composition.  It’s very speculative--*Araripesuchus* is pretty basal on the notosuchian family tree, and even if it did have pinnae, they may not have been this prominent--but I think the world needs more creative paleoart of weird pseudosuchians, since they’re such a cool group that’s relatively unknown to the public.  So here you go.
  
 [Notosuchian Ears](https://onlinelibrary.wiley.com/doi/full/10.1111/joa.12439)
 [Pose Reference](https://www.deviantart.com/pietro-ant/art/Araripesuchus-367508925)
  
 ## Halfway there!
  
-I’d like to say a couple things now that we’re halfway through Inktober and I’ve gotten into the swing of things.  First, you can find me over on Reddit at r/Paleoart and r/Dinosaurs, making these same posts and also responding to other Redditors’ comments and feedback.  It’s been really cool seeing what people like and what they notice, and how my opinion of a piece and the amount of effort I put into it correlates (or doesn’t correlate) with number of upvotes.  Redditors in general have been very supportive.  The most-upvoted post so far was “Legend” (*Tyrannosaurus*), closely followed by “Build” (*Protoceratops*) and “Mindless” (*Ctenochasma*).  I think people liked “Legend” because it was a famous subject and the infographic format was educational; I think people liked “Build” because it’s so cute and wholesome, even though it was relatively low-effort; and I think they liked “Mindless” because the black and white composition is striking.  But the ones I put the most work into were “Mindless” and “Husky” (*Olorotitan*), which got hardly any upvotes.  I think also the day of the week and time of day of posting matters, but it’s hard to tell from this dataset.  Oh, and I can’t forget to mention the one other paleo Inktober Redditor I’ve befriended through this, u/jupiter1390.  He/she has been super encouraging and awesome, and his/her skeletal art is really cool.
+I’d like to say a couple things now that we’re halfway through Inktober and I’ve gotten into the swing of things.  First, you can find me over on Reddit at [r/Paleoart](https://www.reddit.com/r/Paleoart/) and [r/Dinosaurs](https://www.reddit.com/r/Dinosaurs/), making these same posts and also responding to other Redditors’ comments and feedback.  It’s been really cool seeing what people like and what they notice, and how my opinion of a piece and the amount of effort I put into it correlates (or doesn’t correlate) with number of upvotes.  Redditors in general have been very supportive.  The most-upvoted post so far was “Legend” (*Tyrannosaurus*), closely followed by “Build” (*Protoceratops*) and “Mindless” (*Ctenochasma*).  I think people liked “Legend” because it was a famous subject and the infographic format was educational; I think people liked “Build” because it’s so cute and wholesome, even though it was relatively low-effort; and I think they liked “Mindless” because the black and white composition is striking.  But the ones I put the most work into were “Mindless” and “Husky” (*Olorotitan*), which got hardly any upvotes.  I think also the day of the week and time of day of posting matters, but it’s hard to tell from this dataset.  Oh, and I can’t forget to mention the one other paleo Inktober Redditor I’ve befriended through this, u/jupiter1390.  He/she has been super encouraging and awesome, and his/her skeletal art is really cool.
  
 It’s been a couple years since I started getting super into dinosaurs and paleontology, but until now I haven’t really tried my hand seriously at paleoart, even though I’ve done other art (including animals, creature design, and video game fanart) for a long time.  I think this is because the barrier to entry to paleoart is pretty dang high, and only now, after researching and reading about dinosaurs sort of nonstop for two years, do I have enough background knowledge to make any meaningful contribution to paleoart.  When you draw a picture, you have to make assumptions about basically everything, since unlike text you can’t avoid mentioning a certain body part or feature or something, other than intentionally cropping it out.  Without detailed knowledge of a lot of different groups of prehistoric creatures, the assumptions I made when I attempted paleoart in the past were bad.  I could have done more research, but sometimes when you make assumptions, you don’t even realize you’re making them.  I’m really glad that I’m at a point now where I can bring ideas to the table--like giving *Araripesuchus* ears, or showing *Ctenochasma* in the act of fishing, or making *Leaellynasaura* the fluffiest thing ever--that haven’t really been done before, but are still founded in actual science.  It feels like I’m helping, in a tiny way, to advance the field.
  
 Two resources that I found really helpful in making better paleoart are _The Paleoartist’s Handbook_ by Mark Witton (and his [blog](http://markwitton-com.blogspot.com/), which is sort of an extension of that book), and _All Yesterdays_, by John Conway, Darren Naish, and CM Kosemen.  Both of those describe how we know what we know, how to avoid paleoart “memes” / just copying what other paleoartists are doing, give examples of well-executed parsimonious as well as speculative paleoart, and are just super beautiful to look at.
  
-I think the next hurdle in my paleoart career, now that I’ve become much more familiar with the paleo part, is, y’know, the art part.  That definitely just takes practice and straight-up hours spent drawing.  Hopefully if I continue doing things like this (Dinovember? Dinocember? Oh man that’s a bit daunting) I’ll get better.  I’ve learned that a lot of things in life are cumulative.
+I think the next hurdle in my paleoart career, now that I’ve become much more familiar with the paleo part, is, y’know, the art part.  That definitely just takes practice and straight-up hours spent drawing.  Hopefully if I continue doing things like this I’ll get better.  I’ve learned that a lot of things in life are cumulative.
  
 Thanks for sticking with me through my first half of my first Inktober.  We’re over the hump and it’ll be easier from here on out.  Right?  Right??
  
@@ -277,7 +277,7 @@ Since they’re so convergent with dolphins, and dolphins exhibit “infant-carr
 
 Day 20: Tread - *Vouivria* and *Plesiochelys*.  Drawn in about an hour.
  
-One day in Late Jurassic Switzerland, an unfortunate turtle was trodden upon by a sauropod.  Just last month, the fossil preserving this tragic accident was found--a smashed *Plesiochelys* carapace within a sauropod footprint.  We don’t know what sauropod was the culprit, so I picked *Vouivria* since it’s pretty new (described 2017) and roughly matches the time, place, and size of the incident.  *Vouivria* was a basal brachiosaur that weighed about 15 tons--small-to-medium for a sauropod (an elephant is around 7 tonnes; the largest titanosaurs got up to 76 tonnes!).
+One day in Late Jurassic Switzerland, an unfortunate turtle was trodden upon by a sauropod.  Just last month, the fossil preserving this tragic accident was found--a smashed *Plesiochelys* carapace within a sauropod footprint.  We don’t know what sauropod was the culprit, so I picked *Vouivria* since it’s pretty new (described 2017) and roughly matches the time, place, and size of the incident.  *Vouivria* was a basal brachiosaur that weighed about 15 tonnes--small-to-medium for a sauropod (an elephant is around 7 tonnes; the largest titanosaurs got up to 76 tonnes!).
  
 Why does it appear to have a beak?  Well, in 2017 a fossil skull of its close-ish cousin, *Camarasaurus*, was found with soft tissue preserved, showing that it had extensive mouth-gear, possibly including a keratinous beak.  And at SVP 2019 on October 10, research was presented that examined more sauropod fossils and corroborated the theory further (good thing I put off doing an Inktober sauropod until Day 20!).  This doesn’t strike me as too far-fetched, given how many times beaks have arisen independently among amniotes (I can think of at least 12 off the top of my head, which I’m sure isn’t a comprehensive list).  Beaks are a very **homoplastic** trait.  Personally, I think *Vouivria* looks pretty good in a beak.
  
@@ -350,7 +350,7 @@ Day 26: Dark - *Microraptor*.  Drawn in about 90 minutes.
  
 *Microraptor* was a small, four-winged dromaeosaur from Early Cretaceous China known from over 300 specimens, some of which preserve lots of soft tissue, including feathers.  Melanosome (color-determining organelle) studies on the feathers have shown that Microraptor was iridescent black like a crow or grackle, and was thus probably diurnal (since iridescence isn’t useful at night).
  
-Did it fly, or just glide?  (Probably flew.)  Did it look like an X-wing or a kite while doing so?  (Probably started a flight out like a kite, but transitioned to X-wing as it glided.)  Did it live in trees?  (Probably not.)  Why do some specimens have two long tail feathers and others don’t?  A lot of research is going into these questions (a lot of research can be done given the ridiculous number of specimens available) but we don’t have super-confident answers yet.  As time goes on and more people attack the Microraptor specimens, we’ll probably learn a lot more about this animal’s lifestyle!
+Did it fly, or just glide?  (Probably flew.)  Did it look like an X-wing or a kite while doing so?  (Probably started a flight out like a kite, but transitioned to X-wing as it glided.)  Did it live in trees?  (Probably not.)  Why do some specimens have two long tail feathers and others don’t?  A lot of research is going into these questions (a lot of research can be done given the ridiculous number of specimens available) but we don’t have super-confident answers yet.  As time goes on and more people attack the *Microraptor* specimens, we’ll probably learn a lot more about this animal’s lifestyle!
  
 Here, an itchy *Microraptor* preens itself atop a hoodoo-like rock.  I’m pretty sure there wasn’t any reason for hoodoos to be common in the Jehol ecosystem, but I wanted my *Microraptor* to show off its long tail without being in a tree.
  
@@ -393,7 +393,7 @@ Day 30: Catch - *Liaoningosaurus*.  Drawn in about 90 minutes.
 
 Another semiaquatic non-avian dinosaur today, the tiny ankylosaur *Liaoningosaurus*, from the Jehol Biota of Early Cretaceous China.  This little guy was only a bit over a foot long, and fossils of it were found with fish remains preserved in the gut.  It also has a pelvis that isn’t fused to the spine, numerous large fork-like teeth in its beak, and long sharp claws, all of which are possible adaptations to a semiaquatic lifestyle.
 
-Here, a *Liaoningosaurus* chases two *Lycoptera*, a type of fish that was very common in the Jehol Biota.  This is probably the aftermath of a failed ambush, and the dinosaur is now futilely swimming after the much faster fish.  It really looks like such a creature would never be able to nab a fish, but hey, snapping turtles do it somehow, and the fossil record doesn’t lie.
+Here, a *Liaoningosaurus* chases two *Lycoptera*, a type of fish that was very common in the [Jehol Biota](https://obscuredinosaurfacts.com/profile/2020/07/22/yixian.html).  This is probably the aftermath of a failed ambush, and the dinosaur is now futilely swimming after the much faster fish.  It really looks like such a creature would never be able to nab a fish, but hey, snapping turtles do it somehow, and the fossil record doesn’t lie.
 
 ### Day 31: Ripe
 
@@ -405,7 +405,7 @@ Day 31: Ripe - *Acrocanthosaurus*, rolling in something.  Drawn in about an hour
 
 Here, an *Acrocanthosaurus* rolls in a pile of stinky *Ginkgo digitata* false-fruit.  You may be familiar with the stench of *Ginkgo bilboa*, the only living species of ginkgo tree, whose carrion-like musk attracts predators and scavengers to disperse the seeds.  The ripe false-fruits (they’re not true fruits because ginkgos are gymnosperms, not angiosperms) tend to fall in big stinky piles, which looked and smelled like a lot of fun to this *Acrocanthosaurus*.
 
-I picked *Acrocanthosaurus* because (a) I haven’t done any allosauroids yet for Inktober (and *Acrocanthosaurus*  is indisputably the coolest allosauroid), and (b) I wanted to show a stereotypical bloodthirsty carnivore interacting peacefully with plants, because it’s a thing that presumably happened all the time but is rarely shown in paleoart.
+I picked *Acrocanthosaurus* because (a) I haven’t done any allosauroids yet for Inktober (and *Acrocanthosaurus* is indisputably the coolest allosauroid), and (b) I wanted to show a stereotypical bloodthirsty carnivore interacting peacefully with plants, because it’s a thing that presumably happened all the time but is rarely shown in paleoart.
 
 [Paleobotany Inspiration](https://hummingdinosaur.wordpress.com/2014/09/21/fruit-for-dinosaurs-botany-for-paleoartists-part-ii/)
 
